css skills section

--- a/css/creative.css
+++ b/css/creative.css
@@ -7660,6 +7660,13 @@ button.bg-dark:focus {
     -ms-flex-pack: end !important;
     justify-content: flex-end !important;
   }
+
+  #skills {
+    background-color: red;
+    transition: background-color 2s;
+}
+
+
   .justify-content-sm-center {
     -webkit-box-pack: center !important;
     -ms-flex-pack: center !important;
