--- a/css/creative.css
+++ b/css/creative.css
@@ -90,6 +90,14 @@ footer ul {
 }
 
 
+#profile-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 
 footer ul li {
   display: inline-block;
